--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#01487e">
     <link rel="stylesheet" type="text/css" href="./styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-    <title>club náutico</title>
+    <title>club 🌊náutico</title>
 </head>
 
 <body onload="init();initFlag()">
@@ -20,7 +20,7 @@
         <h2>navigating and coding the Internet</h2>
         <nav class="navigation">
             <ul class="navigation__list">
-                <li class="navigation__button"> <span> &#9758;</span> <a href="https://tinyletter.com/clubnautico"
+                <li class="navigation__button"> <span class="symbol"> &#9758;</span> <a href="https://tinyletter.com/clubnautico"
                         target="_blank" rel="noopener noreferrer">únete aquí</a></li>
             </ul>
         </nav>
@@ -36,18 +36,30 @@
         <section>
             <table>
                 <tr>
-                    <td><span> @ </span> Biblioteca Eugenio Trías (Madrid)</td>
+                    <td>
+                        <span class="symbol"> @ </span>
+                        Biblioteca Eugenio Trías (Parque del Retiro, Madrid)
+                    </td>
                 </tr>
                 <tr>
-                    <td> <span>
-                            &#9716;</span> 11:00 - 14:00</td>
+                    <td>
+                        <span class="symbol">
+                            &#9716;</span> 11:00 - 14:00
+                    </td>
                 </tr>
                 <tr>
-                    <td><span>&#10038;</span> El encuentro tiene dos partes:
+                    <td>
+                        <span class="symbol">&#10038;</span> El encuentro tiene dos partes:
                         <ul>
-                            <li>1. Navegación (por webs bonitas)</li>
-                            <li>2. Creación de una web en HTML y CSS durante 2 horas y puesta en común.</li>
-                            <li>Cada sesión tendrá un tema en torno al cual deberán desarrollarse los <i>sites</i>.
+                            <li>
+                                1. Navegación (por webs bonitas)
+                            </li>
+                            <li>
+                                2. Creación de una web en HTML y CSS durante 2 horas y puesta en común.
+                            </li>
+                            <br>
+                            <li>
+                                Cada sesión tendrá un tema en torno al cual deberán desarrollarse los <i>sites</i>.
                             </li>
                         </ul>
                     </td>
