--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <tr>
                     <td>
                         <span class="symbol"> @ </span>
-                        Biblioteca Eugenio Trías (Parque del Retiro, Madrid)
+                        Biblioteca Eugenio Trías (Parque de El Retiro, Madrid)
                     </td>
                 </tr>
                 <tr>
