--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
         <h2>navigating and coding the Internet</h2>
         <nav class="navigation">
             <ul class="navigation__list">
-                <li class="navigation__button"> <span class="symbol"> &#9758;</span> <a href="https://tinyletter.com/clubnautico"
-                        target="_blank" rel="noopener noreferrer">únete aquí</a></li>
+                <li class="navigation__button"> <span class="blinkText">primera sesión en febrero</span></li>
+
+                <li class="navigation__button"> <span class="symbol"> &#9758;</span> <a
+                        href="https://tinyletter.com/clubnautico" target="_blank" rel="noopener noreferrer">únete
+                        aquí</a></li>
             </ul>
         </nav>
     </header>
