--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 </head>
 
 <body onload="init();initFlag()">
-    <header id="title">
+    <header class="title">
         <h1>club náutico</h1>
         <h2>navigating and coding the Internet</h2>
         <nav class="navigation">
             <ul class="navigation__list">
-                <li class="navigation__button"> <span class="blinkText">primera sesión en febrero</span></li>
-
                 <li class="navigation__button"> <span class="symbol"> &#9758;</span> <a
                         href="https://tinyletter.com/clubnautico" target="_blank" rel="noopener noreferrer">únete
                         aquí</a></li>
@@ -32,8 +30,9 @@
         <section>
             <p>El club náutico se reúne un domingo al mes para navegar por Internet y programar webs poéticas.</p>
             <p>* Este club toma como referencia proyectos como <a href="https://sundaysites.cafe/" target="_blank"
-                    rel="noopener noreferrer">Sunday Sites</a> o <a href="https://html.energy/" target="_blank"
-                    rel="noopener noreferrer">HTML Energy.</a>
+                    rel="noopener noreferrer">Sunday Sites</a>, <a href="https://github.com/incompleto/surfclub"
+                    target="_blank" rel="noopener noreferrer">el Surf Club</a> y <a href="https://html.energy/"
+                    target="_blank" rel="noopener noreferrer">HTML Energy.</a>
             </p>
         </section>
         <section>
