Add last session projects

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#01487e">
     <link rel="stylesheet" type="text/css" href="./styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-    <title>club 🌊náutico</title>
+    <title>club 🌊 náutico</title>
 </head>
 
 <body onload="init();initFlag()">
@@ -67,6 +67,7 @@
                     </td>
                 </tr>
             </table>
+
             <form class="form" action="https://tinyletter.com/clubnautico" method="post" target="popupwindow"
                 onsubmit="window.open('https://tinyletter.com/clubnautico', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
                 <label class="form__label" for="tlemail">Únete para enterarte del próximo encuentro:</label>
@@ -74,6 +75,20 @@
                 <input type="hidden" value="1" name="embed" />
                 <input type="submit" class="form__button" value="enviar" />
             </form>
+            <table>
+                <tr>
+                    <td>
+                        sesión #1: una web para pedir un deseo
+                        <br>
+                        <a href="https://veroreinah.github.io/pide-un-deseo/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://veroreinah.github.io/pide-un-deseo/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://veroreinah.github.io/pide-un-deseo/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                    </td>
+                </tr>
+            </table>
         </section>
     </main>
     <div id="flagRenderArea"></div>
