--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                         <br>
                         <a href="https://veroreinah.github.io/pide-un-deseo/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
-                        <a href="https://veroreinah.github.io/pide-un-deseo/" target="_blank" class="icon"
+                        <a href="https://iwish.hotglue.com" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
-                        <a href="https://veroreinah.github.io/pide-un-deseo/" target="_blank" class="icon"
+                        <a href="https://claraharguindey.github.io/pedir-un-deseo/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
                     </td>
                 </tr>
