--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <input type="hidden" value="1" name="embed" />
                 <input type="submit" class="form__button" value="enviar" />
             </form>
-            <table>
+            <table id="projects">
                 <tr>
                     <td>
                         sesión #1: una web para pedir un deseo
