--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <br>
                         <a href="https://veroreinah.github.io/pide-un-deseo/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
-                        <a href="https://iwish.hotglue.com" target="_blank" class="icon"
+                        <a href="https://iwish.hotglue.me" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
                         <a href="https://claraharguindey.github.io/pedir-un-deseo/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
