--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
                         <a href="https://claraharguindey.github.io/pedir-un-deseo/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
                     </td>
+                    <td>
+                        sesión #2: una web para encender un fuego
+                        <br>
+                        <br>
+                        <a href="veroreinah.github.io/encender-un-fuego/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://iwish.hotglue.me" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://claraharguindey.github.io/una-web-para-encender-un-fuego" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                    </td>
                 </tr>
             </table>
         </section>
