--- a/index.html
+++ b/index.html
@@ -83,21 +83,20 @@
                         <br>
                         <a href="https://veroreinah.github.io/pide-un-deseo/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
-                        <a href="https://iwish.hotglue.me" target="_blank" class="icon"
-                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://iwish.hotglue.me" target="_blank" class="icon" rel="noopener noreferrer">⚓</a>
                         <a href="https://claraharguindey.github.io/pedir-un-deseo/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
                     </td>
+                </tr>
+                <tr>
                     <td>
                         sesión #2: una web para encender un fuego
                         <br>
                         <br>
                         <a href="veroreinah.github.io/encender-un-fuego/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
-                        <a href="https://iwish.hotglue.me" target="_blank" class="icon"
-                            rel="noopener noreferrer">⚓</a>
-                        <a href="https://claraharguindey.github.io/una-web-para-encender-un-fuego" target="_blank" class="icon"
-                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://claraharguindey.github.io/una-web-para-encender-un-fuego" target="_blank"
+                            class="icon" rel="noopener noreferrer">⚓</a>
                     </td>
                 </tr>
             </table>
