--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         sesión #2: una web para encender un fuego
                         <br>
                         <br>
-                        <a href="veroreinah.github.io/encender-un-fuego/" target="_blank" class="icon"
+                        <a href="https://veroreinah.github.io/encender-un-fuego/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
                         <a href="https://claraharguindey.github.io/una-web-para-encender-un-fuego" target="_blank"
                             class="icon" rel="noopener noreferrer">⚓</a>
