fix surfclub link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section>
             <p>El club náutico se reúne un domingo al mes para navegar por Internet y programar webs poéticas.</p>
             <p>* Este club toma como referencia proyectos como <a href="https://sundaysites.cafe/" target="_blank"
-                    rel="noopener noreferrer">Sunday Sites</a>, <a href="https://github.com/incompleto/surfclub"
+                    rel="noopener noreferrer">Sunday Sites</a>, <a href="https://incompleto.github.io/surfclub/"
                     target="_blank" rel="noopener noreferrer">el Surf Club</a> y <a href="https://html.energy/"
                     target="_blank" rel="noopener noreferrer">HTML Energy.</a>
             </p>
