--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <form class="form" action="https://tinyletter.com/clubnautico" method="post" target="popupwindow"
                 onsubmit="window.open('https://tinyletter.com/clubnautico', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
-                <label class="form__label" for="tlemail">Únete para enterarte del próximo encuentro:</label>
+                <label class="form__label" for="tlemail">Únete para apuntarte al próximo encuentro:</label>
                 <input class="form__input" type="text" name="email" id="tlemail" placeholder="ejemplo@ejemplo.com" />
                 <input type="hidden" value="1" name="embed" />
                 <input type="submit" class="form__button" value="enviar" />
