--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
                             class="icon" rel="noopener noreferrer">⚓</a>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        sesión #3: una web de verano
+                        <br>
+                        <br>
+                        <a href="https://claraharguindey.github.io/una-web-de-verano" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://iwish.hotglue.me/summer" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://web-para-comerte-un-helado.glitch.me/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                    </td>
+                </tr>
             </table>
         </section>
     </main>
