--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                 <tr>
                     <td>
                         <span class="symbol"> @ </span>
-                        Biblioteca Eugenio Trías (Parque de El Retiro, Madrid)
+                        HYPER HOUSE (C/ Ramón Sainz 22) <br></br>
+                        (sesión especial dentro del programa de la exposición <a href="https://hyperhouse.art/"
+                            target="_blank">W*IP</a> comisariada por Pau Jiménez)
+                        <!-- Biblioteca Eugenio Trías (Parque de El Retiro, Madrid) -->
                     </td>
                 </tr>
                 <tr>
