--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <span class="symbol"> @ </span>
                         HYPER HOUSE (C/ Ramón Sainz 22) <br></br>
                         (sesión especial dentro del programa de la exposición <a href="https://hyperhouse.art/"
-                            target="_blank">W*IP</a> comisariada por Pau Jiménez)
+                            target="_blank" rel="noopener noreferrer">W*IP</a> comisariada por Pau Jiménez)
                         <!-- Biblioteca Eugenio Trías (Parque de El Retiro, Madrid) -->
                     </td>
                 </tr>
