--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
                     <td>
                         <span class="symbol"> @ </span>
                         HYPER HOUSE (C/ Ramón Sainz 22) <br></br>
-                        (sesión especial dentro del programa de la exposición <a href="https://hyperhouse.art/"
-                            target="_blank" rel="noopener noreferrer">W*IP</a> comisariada por Pau Jiménez)
+
+                        * Sesión especial dentro del programa de la exposición <a href="https://hyperhouse.art/"
+                            target="_blank" rel="noopener noreferrer">W*IP</a> comisariada por Pau Jiménez *
+                        <br></br>
+                        INSCRIPCIONES <a href="mailto:house@hyperstudio.es" target="_blank"
+                            rel="noopener noreferrer">house@hyperstudio.es</a>
+
                         <!-- Biblioteca Eugenio Trías (Parque de El Retiro, Madrid) -->
                     </td>
                 </tr>
