Adding wip session

--- a/index.html
+++ b/index.html
@@ -40,15 +40,7 @@
                 <tr>
                     <td>
                         <span class="symbol"> @ </span>
-                        HYPER HOUSE (C/ Ramón Sainz 22) <br></br>
-
-                        * Sesión especial dentro del programa de la exposición <a href="https://hyperhouse.art/"
-                            target="_blank" rel="noopener noreferrer">W*IP</a> comisariada por Pau Jiménez *
-                        <br></br>
-                        INSCRIPCIONES <a href="mailto:house@hyperstudio.es" target="_blank"
-                            rel="noopener noreferrer">house@hyperstudio.es</a>
-
-                        <!-- Biblioteca Eugenio Trías (Parque de El Retiro, Madrid) -->
+                        Biblioteca Eugenio Trías (Parque de El Retiro, Madrid)
                     </td>
                 </tr>
                 <tr>
