--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 <li class="navigation__button"> <span class="symbol"> &#9758;</span> <a
                         href="https://tinyletter.com/clubnautico" target="_blank" rel="noopener noreferrer">únete
                         aquí</a></li>
+                <li class="navigation__button"> <span class="symbol"> &#9758;</span> <a
+                        href="/wip.html" target="_blank" rel="noopener noreferrer">RECURSOS
+                        W*IP</a></li>
             </ul>
         </nav>
     </header>
