--- a/wip.html
+++ b/wip.html
@@ -19,29 +19,40 @@
         <h1>club náutico</h1>
         <h2>navigating and coding the Internet</h2>
         <h3>W*IP ⚓ Una web que será otra</h3>
+        <i>wifi:</i> hyperhouse<br>
+        <i>password:</i> hyperhouse202x
     </header>
     <main>
         <section>
             <table>
                 <tr>
                     <td>
-                        1. entra
+                        1. Accede al código fuente que compartiremos todas
                         <a href="https://glitch.com/edit/#!/truth-secretive-cephalopod" target="_blank"
-                            rel="noopener noreferrer">AQUÍ</a> y haz clic en el botón REMIX
+                            rel="noopener noreferrer">AQUÍ</a> y haz clic en el botón REMIX para duplicarlo.
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        2. Conoce las etiquetas HTML que existen <a
+                        2. Aquí hay un resumen de todas las etiquetas <a
                             href="https://www.w3schools.com/tags/default.asp" target="_blank"
-                            rel="noopener noreferrer">AQUÍ</a>
+                            rel="noopener noreferrer">HTML</a> que existen.
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        3. Para entender mejor de qué hablamos cuando hablamos de HTML, lee esta <a
+                            href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank"
+                            rel="noopener noreferrer">documentación</a>.
+                    </td>
+                </tr>
+
                 <tr>
                     <td>
                         ✶ Referencias para soñar otras webs
                         <br>
                         <br>
+
                         <a href="https://www.are.na/block/20037775" target="_blank" rel="noopener noreferrer">What
                             website should I design?</a>
                         <br><br>
@@ -58,7 +69,7 @@
                         <a href="https://www.are.na/esther-bouquet/a-website-as-a-poem-a-garden-a-portal-a-place-of-gathering-and-more"
                             target="_blank" rel="noopener noreferrer">
                             a website as a poem, a garden, a portal, a place of gathering and more</a>
-
+                        <br><br>
                         <a href="https://herdimasanggara.com/" target="_blank" rel="noopener noreferrer">
                             ritual engineer</a>
                         <br><br>
