--- a/wip.html
+++ b/wip.html
@@ -18,7 +18,7 @@
     <header class="title">
         <h1>club náutico</h1>
         <h2>navigating and coding the Internet</h2>
-        <h3>W*IP ⚓ Una web que será otra</h3>
+        <h3>W*IP ⚓ Una web que fue otra</h3>
         <i>wifi:</i> hyperhouse<br>
         <i>password:</i> hyperhouse202x
     </header>
