--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <li class="navigation__button"> <span class="symbol"> &#9758;</span> <a
                         href="https://tinyletter.com/clubnautico" target="_blank" rel="noopener noreferrer">únete
                         aquí</a></li>
-                <li class="navigation__button"> <span class="symbol"> &#9758;</span> <a
-                        href="/wip.html" target="_blank" rel="noopener noreferrer">RECURSOS
+                <li class="navigation__button"> <span class="symbol"> &#9758;</span> <a href="/wip.html" target="_blank"
+                        rel="noopener noreferrer">RECURSOS
                         W*IP</a></li>
             </ul>
         </nav>
@@ -113,6 +113,24 @@
                             rel="noopener noreferrer">⚓</a>
                         <a href="https://web-para-comerte-un-helado.glitch.me/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        sesión #4: una web que será otra
+                        <br>
+                        <br>
+                        <a href="http://catnip-amusing-bow.glitch.me/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="http://night-beryl-nova.glitch.me/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="http://romantic-canyon-cup.glitch.me/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://nutritious-sequoia-postage.glitch.me/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href=" https://cautious-melodic-neon.glitch.me/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+
                     </td>
                 </tr>
             </table>
