--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 <tr>
                     <td>
                         sesión #4: una web que será otra
+                        (sesión especial, exposición W*IP en HYPERHOUSE)
                         <br>
                         <br>
                         <a href="http://catnip-amusing-bow.glitch.me/" target="_blank" class="icon"
