--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <table>
                 <tr>
                     <td>
-                        Próxima sesión especial <a href="https://festivalmaquina.com/" target="_blank"
+                        Próxima sesión especial 18 de Noviembre <a href="https://festivalmaquina.com/" target="_blank"
                             rel="noopener noreferrer">Festival Máquina</a> <br> <br>
                         Inscripciones en <a href="mailto:hola@todobien.org">hola@todobien.org</a>
                     </td>
