--- a/maquina.html
+++ b/maquina.html
@@ -19,8 +19,8 @@
         <h1>club náutico</h1>
         <h2>navigating and coding the Internet</h2>
         <h3>FESTIVAL MÁQUINA ⚓ Una web que es un hechizo</h3>
-        <!-- <i>wifi:</i> hyperhouse<br>
-        <i>password:</i> hyperhouse202x -->
+        <i>wifi:</i> cigareras_wk<br>
+        <i>password:</i> #pi$31415926@
     </header>
     <main>
         <section>
@@ -92,6 +92,9 @@
                         <br><br>
                         <a href="https://esoteric.codes/" target="_blank" rel="noopener noreferrer">
                             Esoteric codes</a>
+                        <a href="https://solarpunk.cool/zines/map-is-the-territory/" target="_blank"
+                            rel="noopener noreferrer">
+                            Map is the territory</a>
                     </td>
 
                 </tr>
