--- a/index.html
+++ b/index.html
@@ -40,23 +40,15 @@
             <table>
                 <tr>
                     <td>
-                        Próxima sesión especial 18 de Noviembre <a href="https://festivalmaquina.com/" target="_blank"
-                            rel="noopener noreferrer">Festival Máquina</a> <br> <br>
-                        Inscripciones en <a href="mailto:hola@todobien.org">hola@todobien.org</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
                         <span class="symbol"> @ </span>
-                        <!--Biblioteca Eugenio Trías (Parque de El Retiro, Madrid)-->
-                        Centro Cultural Las Cigarreras (Alicante)
+                        Biblioteca Eugenio Trías (Parque de El Retiro, Madrid)
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <span class="symbol">
-                            &#9716;</span> 10:00 - 12:00
-                            <!--11:00 - 14:00-->
+                            &#9716;</span> 
+                            11:00 - 14:00
                     </td>
                 </tr>
                 <tr>
@@ -125,7 +117,7 @@
                 <tr>
                     <td>
                         sesión #4: una web que será otra
-                        (sesión especial, exposición W*IP en HYPERHOUSE)
+                        (sesión especial, exposición W*IP @ HYPERHOUSE)
                         <br>
                         <br>
                         <a href="http://catnip-amusing-bow.glitch.me/" target="_blank" class="icon"
@@ -137,6 +129,21 @@
                         <a href="https://nutritious-sequoia-postage.glitch.me/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
                         <a href=" https://cautious-melodic-neon.glitch.me/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        sesión #5: una web que es un hechizo
+                        <br>
+                        (sesión especial, Festival Máquina @ Las Cigarreras CC)
+                        <br>
+                        <br>
+                        <a href="https://surf-plump-red.glitch.me/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://zealous-brazen-fireplace.glitch.me/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://truth-secretive-cephalopod.glitch.me/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
                     </td>
                 </tr>
