--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__button"> <span class="symbol"> &#9758;</span>
-                     <!-- <a
+                    <!-- <a
                         href="https://tinyletter.com/clubnautico" target="_blank" rel="noopener noreferrer">únete para
                         enterarte del próximo encuentro
                     </a> -->
-                    Próximo encuentro: 25 marzo en Valencia
+                    Próximo encuentro: 31 de marzo en Valencia
                 </li>
             </ul>
         </nav>
@@ -51,8 +51,8 @@
                 <tr>
                     <td>
                         <span class="symbol">
-                            &#9716;</span> 
-                            11:00 - 14:00
+                            &#9716;</span>
+                        11:00 - 14:00
                     </td>
                 </tr>
                 <tr>
@@ -72,6 +72,20 @@
                         </ul>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <span class="symbol">&#10038;</span> ¿Qué necesitas?
+                        <ul>
+                            <li>
+                                1. Tu ordenador (si no tienes/puedes, ¡compartimos!).
+                            </li>
+                            <li>
+                                2. Usn editor de código o una cuenta en <a
+                                    href="https://glitch.com/">Glitch</a>, un editor de código online.
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
             </table>
             <!-- <form class="form" id="sib-form" method="POST" action="https://7ca977d9.sibforms.com/serve/MUIFAIgzMYPXOFjp_fPUOzVQuTWzF5ZrxIzTVUlDJP_4zVUrNhr1R01Dd36k4PdFf827JAJyK8UTmOfSHzrMIWXSnTwIYAe9h4gQuYlt6rRfneqKnLL1LFY9TZ8OBYwQjTIx7fP7G4W-Onxc14AIvWt4Gy3f6dhmKxaXxZhKH0hf4_6IeQ3VEOr1lYbw2OJWJlatcGA4_Rer2WIL">
                 <label class="form__label" for="tlemail">Únete para enterarte del próximo encuentro:</label>
@@ -80,6 +94,7 @@
                 <input type="hidden" name="html_type" value="simple">
                 <input type="submit" class="form__button" value="enviar" />
             </form> -->
+            <div>🌊 🌊 🌊 🌊 🌊 🌊 🌊 🌊 🌊 🌊 🌊 🌊 🌊 🌊 🌊 🌊 🌊</div>
             <table id="projects">
                 <tr>
                     <td>
