--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                                 1. Tu ordenador (si no tienes/puedes, ¡compartimos!).
                             </li>
                             <li>
-                                2. Usn editor de código o una cuenta en <a
-                                    href="https://glitch.com/">Glitch</a>, un editor de código online.
+                                2. Usn editor de código o una cuenta en <a href="https://glitch.com/">Glitch</a>, un
+                                editor de código online.
                             </li>
                         </ul>
                     </td>
@@ -163,6 +163,17 @@
                             rel="noopener noreferrer">⚓</a>
                         <a href="https://truth-secretive-cephalopod.glitch.me/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        sesión #6: una web que es un eclipse
+                        <br>
+                        <br>
+                        <a href="https://eclipse-nautico.glitch.me/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://claraharguindey.github.io/una-web-que-es-un-eclipse/" target="_blank"
+                            class="icon" rel="noopener noreferrer">⚓</a>
                     </td>
                 </tr>
             </table>
