--- a/index.html
+++ b/index.html
@@ -21,11 +21,42 @@
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__button"> <span class="symbol"> &#9758;</span>
-                    <!-- <a
-                        href="https://tinyletter.com/clubnautico" target="_blank" rel="noopener noreferrer">únete para
-                        enterarte del próximo encuentro
-                    </a> -->
-                    Próximo encuentro: 31 de marzo en Valencia
+                    Únete para enterarte del próximo encuentro
+                    <div id="mc_embed_shell">
+                        <div id="mc_embed_signup">
+                            <form
+                                action="https://website.us18.list-manage.com/subscribe/post?u=d0b7563baad2b4eff5749e6fc&amp;id=87a66ed5c3&amp;f_id=00119ae6f0"
+                                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                                class="validate form" target="_blank">
+                                <div id="mc_embed_signup_scroll">
+                                    <div class="mc-field-group form">
+                                        <label for="mce-EMAIL" class="form__label">E-mail
+                                        </label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL"
+                                            required="" value="">
+                                    </div>
+                                    <div id="mce-responses" class="clear foot">
+                                        <div class="response" id="mce-error-response" style="display: none;"></div>
+                                        <div class="response" id="mce-success-response" style="display: none;"></div>
+                                    </div>
+                                    <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                        <input type="text" name="b_d0b7563baad2b4eff5749e6fc_87a66ed5c3" tabindex="-1"
+                                            value="">
+                                    </div>
+                                    <div class="optionalParent">
+                                        <div class="clear foot">
+                                            <input type="submit" name="subscribe" id="mc-embedded-subscribe"
+                                                class="form__button" value="enviar">
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <script type="text/javascript"
+                            src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+                        <script
+                            type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+                    </div>
                 </li>
             </ul>
         </nav>
