--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__button"> <span class="symbol"> &#9758;</span>
-                    Únete para enterarte del próximo encuentro
+                    Próximo encuentro 17 de diciembre. Suscríbete para enterarte de todos.
                     <div id="mc_embed_shell">
                         <div id="mc_embed_signup">
                             <form
@@ -35,10 +35,10 @@
                                             required="" value="">
                                     </div>
                                     <div id="mce-responses" class="clear foot">
-                                        <div class="response" id="mce-error-response" style="display: none;"></div>
-                                        <div class="response" id="mce-success-response" style="display: none;"></div>
+                                        <div class="response" id="mce-error-response" style="display: none; text-transform: capitalize; margin-bottom: 12px;"></div>
+                                        <div class="response" id="mce-success-response" style="display: none; text-transform: capitalize; margin-bottom: 12px;"></div>
                                     </div>
-                                    <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                    <div aria-hidden="true" style="position: absolute; left: -5000px; ">
                                         <input type="text" name="b_d0b7563baad2b4eff5749e6fc_87a66ed5c3" tabindex="-1"
                                             value="">
                                     </div>
@@ -75,15 +75,14 @@
                 <tr>
                     <td>
                         <span class="symbol"> @ </span>
-                        <!-- Biblioteca Eugenio Trías (Parque de El Retiro, Madrid) -->
-                        * Localización por definir *
+                        Biblioteca Eugenio Trías (Parque de El Retiro, Madrid)
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <span class="symbol">
                             &#9716;</span>
-                        11:00 - 14:00
+                        18:00 - 20:00
                     </td>
                 </tr>
                 <tr>
@@ -94,7 +93,7 @@
                                 1. Navegación (por webs bonitas)
                             </li>
                             <li>
-                                2. Creación de una web en HTML y CSS durante 2 horas y puesta en común.
+                                2. Creación de una web en HTML y CSS y puesta en común.
                             </li>
                             <br>
                             <li>
