--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
     <main>
         <section>
-            <p>El club náutico se reúne un domingo al mes para navegar por Internet y programar webs poéticas.</p>
+            <p>El club náutico se reúne una vez al mes para navegar por Internet y programar webs poéticas.</p>
             <p>* Este club toma como referencia proyectos como <a href="https://sundaysites.cafe/" target="_blank"
                     rel="noopener noreferrer">Sunday Sites</a>, <a href="https://incompleto.github.io/surfclub/"
                     target="_blank" rel="noopener noreferrer">el Surf Club</a> y <a href="https://html.energy/"
@@ -110,7 +110,7 @@
                                 1. Tu ordenador (si no tienes/puedes, ¡compartimos!).
                             </li>
                             <li>
-                                2. Usn editor de código o una cuenta en <a href="https://glitch.com/">Glitch</a>, un
+                                2. Un editor de código o una cuenta en <a href="https://glitch.com/">Glitch</a>, un
                                 editor de código online.
                             </li>
                         </ul>
