--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__button"> <span class="symbol"> &#9758;</span>
-                    Próximo encuentro 17 de diciembre. Suscríbete para enterarte de todos.
+                    Suscríbete a la <i>newsletter</i> para enterarte de los encuentros. <br>Enviamos un correo antes de
+                    la sesión para
+                    apuntarse. Plazas limitadas.
                     <div id="mc_embed_shell">
                         <div id="mc_embed_signup">
                             <form
@@ -35,8 +37,12 @@
                                             required="" value="">
                                     </div>
                                     <div id="mce-responses" class="clear foot">
-                                        <div class="response" id="mce-error-response" style="display: none; text-transform: capitalize; margin-bottom: 12px;"></div>
-                                        <div class="response" id="mce-success-response" style="display: none; text-transform: capitalize; margin-bottom: 12px;"></div>
+                                        <div class="response" id="mce-error-response"
+                                            style="display: none; text-transform: capitalize; margin-bottom: 12px;">
+                                        </div>
+                                        <div class="response" id="mce-success-response"
+                                            style="display: none; text-transform: capitalize; margin-bottom: 12px;">
+                                        </div>
                                     </div>
                                     <div aria-hidden="true" style="position: absolute; left: -5000px; ">
                                         <input type="text" name="b_d0b7563baad2b4eff5749e6fc_87a66ed5c3" tabindex="-1"
