--- a/index.html
+++ b/index.html
@@ -216,6 +216,12 @@
                             rel="noopener noreferrer">⚓</a>
                         <a href="https://astigmatismo.glitch.me/" target="_blank" class="icon"
                             rel="noopener noreferrer">⚓</a>
+                        <a href="https://greciatell.neocities.org/04/Untitled-1 " target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://emmagonfer.neocities.org/otro/abyss/" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                        <a href="https://marcomoyano.neocities.org/proyecto_5(abismo)/puerta" target="_blank"
+                            class="icon" rel="noopener noreferrer">⚓</a>
                     </td>
                 </tr>
             </table>
