--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <td>
                         <span class="symbol">
                             &#9716;</span>
-                        18:00 - 20:00
+                        22 oct 17:30 - 19:30
                     </td>
                 </tr>
                 <tr>
