--- a/index.html
+++ b/index.html
@@ -223,6 +223,15 @@
                         <a href="https://marcomoyano.neocities.org/proyecto_5(abismo)/puerta" target="_blank"
                             class="icon" rel="noopener noreferrer">⚓</a>
                     </td>
+                <tr>
+                    <td>
+                        sesión #8: una web que es un paseo de otoño
+                        <br>
+                        <br>
+                        <a href="https://promesa.online/una-web-que-es-un-paseo" target="_blank" class="icon"
+                            rel="noopener noreferrer">⚓</a>
+                    </td>
+                </tr>
                 </tr>
             </table>
         </section>
