add shared file

--- a/mnad.html
+++ b/mnad.html
@@ -34,17 +34,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <span class="symbol">&#10038;</span> ¿Qué es el desbordamiento?
-                        <br><br>
-                        El overflow es lo que ocurre cuando el contenido de un elemento es más grande que su contenedor. 
-                        <br><br>
-                        En CSS, podemos decidir qué hacer con ese desbordamiento:
-                        <ul>
-                            <li><strong>overflow: visible</strong> - el contenido se sale y se ve (por defecto)</li>
-                            <li><strong>overflow: hidden</strong> - lo que se sale se oculta, se corta</li>
-                            <li><strong>overflow: scroll</strong> - aparecen barras de desplazamiento</li>
-                            <li><strong>overflow: auto</strong> - barras solo si hace falta</li>
-                        </ul>
+                        <span class="symbol">&#10038;</span> Una web que se desborda
                     </td>
                 </tr>
                 <tr>
@@ -76,11 +66,11 @@
                 </tr>
                 <tr>
                     <td>
-                        <span class="symbol">~</span> Al final de la sesión:
+                        <span class="symbol"> Al final de la sesión:
                         <ul>
                             <li>Haz clic en "Save" en CodePen (arriba a la derecha)</li>
                             <li>Copia la URL de tu pen</li>
-                            <li>Pásala a través del formulario que compartiremos</li>
+                            <li>Compártela, <a href="https://cryptpad.fr/doc/#/2/doc/edit/Dm4qB7fPNebeve9t-xOPIbMh/" target="_blank" rel="noopener noreferrer">aquí</a>.</li>
                         </ul>
                     </td>
                 </tr>
