--- a/mnad.html
+++ b/mnad.html
@@ -68,9 +68,7 @@
                     <td>
                         <span class="symbol"> Al final de la sesión:
                         <ul>
-                            <li>Haz clic en "Save" en CodePen (arriba a la derecha)</li>
-                            <li>Copia la URL de tu pen</li>
-                            <li>Compártela, <a href="https://cryptpad.fr/doc/#/2/doc/edit/Dm4qB7fPNebeve9t-xOPIbMh/" target="_blank" rel="noopener noreferrer">aquí</a>.</li>
+                            <li>Comparte tu web <a href="https://cryptpad.fr/doc/#/2/doc/edit/Dm4qB7fPNebeve9t-xOPIbMh/" target="_blank" rel="noopener noreferrer">aquí</a>.</li>
                         </ul>
                     </td>
                 </tr>
@@ -118,11 +116,6 @@
                         <br><br>
                         <a href="https://poetryslash.com/" target="_blank" rel="noopener noreferrer">
                             Poetry Slash</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img class="image" src="src/media/clubnautico.png">
                     </td>
                 </tr>
             </table>
