--- a/mnad.html
+++ b/mnad.html
@@ -40,7 +40,7 @@
                 <tr>
                     <td>
                         1. Si necesitas un borrador para empezar, puedes editar este <a href="https://codepen.io/clara_harguindey/pen/JoKqGGB?editors=1100" target="_blank" rel="noopener noreferrer">de aquí</a> 
-                        (no necesitas cuenta para empezar).
+                        (necesitas cuenta para publicar).
                     </td>
                 </tr>
                 <tr>
@@ -59,7 +59,7 @@
                 </tr>
                 <tr>
                     <td>
-                        4. Para usar imágenes, solo puedes usar URLs. Puedes subir tus fotos a 
+                        4. Para usar imágenes en Codepen, solo puedes usar URLs. Puedes subir tus fotos a 
                         <a href="https://imgur.com/upload" target="_blank" rel="noopener noreferrer">Imgur</a> 
                         y copiar el enlace directo.
                     </td>
