--- a/mnad.html
+++ b/mnad.html
@@ -18,8 +18,8 @@
     <header class="title">
         <h1>club náutico</h1>
         <h2>navigating and coding the Internet</h2>
-        <h3>MNAD ⚓ Una web que se desborda</h3>
-        <i>18 de febrero 2025, 16h-20h</i>
+        <h3>MNAD ⚓ Una web que se desborda  ⚓ ESD - Madrid</h3>
+        <i>18 de febrero 2026, 16h-20h</i>
     </header>
     <main>
         <section>
